# Database-Engine

./: .gitignore  CMakeLists.txt  README.md
data/: database.db  users.db
include/: btree.h  database.h  index.h  pager.h  row.h  schema.h  serializer.h  statement.h  table.h  value.h
src/: btree.cpp  database.cpp  index.cpp  main.cpp  pager.cpp  schema.cpp  serializer.cpp  statement.cpp  table.cpp  value.cpp
